Fix homepage layout spacing to match prototype - reduce space before title, adjust card heights and alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,16 +83,19 @@ div:has(div.hods-loading-spinner) { .govuk-grid-column-two-thirds {width:100%;} 
   padding-bottom: 0;
 }
 
-.card-group {
+
+
+.card-main {
+  border: solid #b1b4b6 1px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  width: 100%;
+  flex-direction: column;
+  width: 450px;
+  height: auto;
 }
 
 .card-half-width {
-  width: 350px;
-  flex: 0 0 350px;
+  width: 450px;
+  height: 200px;
   border: solid #b1b4b6 1px;
 }
 
@@ -105,15 +108,31 @@ div:has(div.hods-loading-spinner) { .govuk-grid-column-two-thirds {width:100%;} 
 
 .card-label {
   background-color: #f3f2f1;
-  padding: 10px 0 1px 15px;
+  padding: 10px 15px;
   margin: 0 0 10px 0;
+  min-height: 60px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.card-content {
+  padding: 15px 15px 0 15px;
+  flex-grow: 1;
+}
+
+.card-links {
+  padding: 0 0 15px 0;
+  font-size: 19px;
 }
 
 .card-label-with-tag {
+  background-color: #f3f2f1;
+  padding: 10px 15px;
+  margin: 0 0 10px 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 10px 15px 1px 15px;
+  min-height: 60px;
 }
 
 .card-label-with-tag .govuk-tag {
@@ -125,20 +144,18 @@ div:has(div.hods-loading-spinner) { .govuk-grid-column-two-thirds {width:100%;} 
   margin-bottom: 0;
 }
 
-.card-content {
-  padding: 15px 15px 0 15px;
-}
-
-.card-links {
-  padding: 0 0 15px 0;
-}
-
 .columns .manage-acc-li {
   float: left;
   width: 50%;
 }
 
-.columns .mng-acc-body-text-width {
+.card-group {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
+.mng-acc-body-text-width {
   width: 95%;
 }
 
